apps/product-service/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service

  annotations:

    instrumentation.opentelemetry.io/inject-java: "true"

spec:
  replicas: 2

  revisionHistoryLimit: 5 

  selector:
    matchLabels:
      app: product-service
      networkpolicy.enabled: "true"
      pdb.enabled: "true"

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  template:
    metadata:
      labels:
        app: product-service

    spec:
      terminationGracePeriodSeconds: 30

      volumes:
        - name: tmp-volume
          emptyDir: {}
          
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: product-service

      containers:
        - name: product-service
          image: 579871530627.dkr.ecr.us-east-1.amazonaws.com/ja-mics-ap/product-service
          imagePullPolicy: IfNotPresent

          securityContext:          
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

          volumeMounts:
            - name: tmp-volume
              mountPath: /tmp

          resources:         
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          lifecycle:              
            preStop:
              exec:
                command:
                  - sh
                  - -c
                  - sleep 10


          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8082
            initialDelaySeconds: 10
            periodSeconds: 5

          livenessProbe: 
            httpGet:
              path: /actuator/health/liveness
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 10
            
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            failureThreshold: 30
            periodSeconds: 10

          ports:
            - containerPort: 8082
