apps/product-service/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: my-app

  annotations:
    kubernetes.io/ingress.class: alb

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb

  rules:
    - host: api.company.com

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: my-app

                port:
                  number: 80
